<resources>
    <string name="app_name">RollerDerbyMentorMagic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Roller Derby Mentor Magic</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_skills">Skills</string>
    <string name="menu_basic_skills_header">1 Basic Skating Skills</string>
    <string name="menu_recovery_tactics_header">2 Recovery Tactics</string>
    <string name="menu_balance_agility_header">3 Balance and Agility</string>
    <string name="menu_skills_interactions_header">4 Pack Skills and Interactions</string>
    <string name="menu_blocking_header">5 Blocking</string>
    <string name="menu_glossary_header">6 Glossary</string>
    <string name="menu_other_stuff_header">Other Stuff</string>
    <string name="nav_skills_skating_posture">1.1 Skating Posture</string>
    <string name="nav_skills_stride">1.2 Stride</string>
    <string name="nav_skills_crossovers">1.3 Crossovers</string>
    <string name="nav_skills_speed_endurance">1.4 Speed and Endurance</string>
    <string name="nav_skills_stops">1.5 Stops</string>
    <string name="nav_skills_other_skills">1.6 Other Skating Skills</string>
    <string name="nav_skills_knee_taps">2.1 Knee Taps</string>
    <string name="nav_skills_knee_slides">2.2 Knee Slides</string>
    <string name="nav_skills_standing_stepping">3.1 Standing and Stepping</string>
    <string name="nav_skills_hopping">3.2 Hopping</string>
    <string name="nav_skills_focus">3.3 Focus</string>
    <string name="nav_skills_weaving">3.4 Weaving</string>
    <string name="nav_skills_transitions">3.5 Transitions</string>
    <string name="nav_skills_whips">4.1 Whips</string>
    <string name="nav_skills_pushes">4.2 Pushes</string>
    <string name="nav_skills_pacing">4.3 Pacing</string>
    <string name="nav_skills_moving_obstacles">4.4 Moving Obstacles</string>
    <string name="nav_skills_unexpected_obstacles">4.5 Unexpected Obstacles</string>
    <string name="nav_skills_taking_hits">5.1 Taking Hits</string>
    <string name="nav_skills_positional_blocking">5.2 Positional Blocking</string>
    <string name="nav_skills_checks">5.3 Checks</string>
    <string name="about_full">
        <![CDATA[
        <p>The skills information provided by this app follows the requirements outlined by the document \"WFTDA Minimum Skills Version 4.10\", dated January 31, 2013.</p>
        <br/>
        <p>This app is not currently endorsed by WFTDA, MRDA or any other organisations.</p>
        ]]>
    </string>
    <string name="skills_skating_posture">
        <![CDATA[
<h3>1.1 Skating Posture</h3>
<p>1.1.1 Bends at knees and hips with shoulders back.</p>
<p>1.1.2 Demonstrates stability, with center of gravity down and forward.</p>
<p>1.1.3 Demonstrates ability to skate low with bent, flexible knees.</p>
        ]]>
    </string>
    <string name="skills_stride">
        <![CDATA[
<h3>1.2 Stride</h3>
<p>1.2.1 Uses steady, confident, fluid strides.</p>
<p>1.2.2 Uses both feet to push forward on straightaways.</p>
<p>1.2.3 Shifts weight completely from foot to foot without stumbling.</p>
        ]]>
    </string>
    <string name="skills_crossovers">
        <![CDATA[
<h3>1.3 Crossovers</h3>
<p>1.3.1 Performs smooth crossovers while skating straightaways and track turns.</p>
<p>1.3.2 Uses both feet to push during crossovers.</p>
<p>1.3.3 Performs reverse crossovers, crossing over the right foot to the outside of the track.</p>
        ]]>
    </string>
    <string name="skills_speed_endurance">
        <![CDATA[
<h3>1.4 Speed and Endurance</h3>
<p>1.4.1 Skates at least 27 laps around regulation track within five minutes.</p>
<p>1.4.2 Accelerates from a standstill to complete one lap within 13 seconds.</p>
        ]]>
    </string>
    <string name="skills_stops">
        <![CDATA[
<h3>1.5 Stops</h3>
<p>Skater must come to a complete stop from a brisk pace within four seconds, using proper form and without losing balance.</p>
<p>Each WFTDA-Member league that enters into a WFTDA-sanctioned game must designate a league member who is responsible for verifying that every skater in the game meets all of the skill requirements listed below. Passing the WFTDA Skater Rules Test is also part of the minimum skills requirement. Member leagues are responsible for determining frequency of re-assessment based on league skaters’ experience and skill level.</p>
<p>These minimum skills are:</p>
<ul>
    <li>Required for charter team skaters playing WFTDA sanctioned games.</li>
    <li>Strongly recommended for skaters playing in interleague scrimmage or games.</li>
    <li>Strongly recommended for skaters playing in intraleague (home) scrimmages or games</li>
    <li>Recommended for new skaters to graduate to contact drills and intraleague (home league) scrimmages.</li>
</ul>

<p>1.5.1 T-Stop
<p>1.5.1.1 Balancing weight on one leg, other foot is turned at a 90° angle so the heel or arch of the turned foot is aligned with the heel of the other foot.</p>
<p>1.5.1.2 Maintaining balance on one leg, applies smooth pressure with the turned foot using the two outside wheels, the two front wheels or all four wheels (does not use only the two inside wheels).</p>
<p>1.5.2 Plow stop</p>
<p>1.5.2.1 Turns one or both feet so toes are pointing in and heels are pointing out.</p>
<p>1.5.2.2 Upon completion of stop, feet are in a position that would allow resumed skating (feet are not spread so wide apart skater must adjust stance before resuming skating).</p>
        ]]>
    </string>
    <string name="skills_other_skills">
        <![CDATA[
<h3>1.6 Other Skating Skills</h3>
<p>1.6.1 Performs one-foot glides with each foot for the length of the track turn and straightaway with good balance.</p>
<p>1.6.1.1 In low stance with one foot completely off the floor, able to balance weight over the other foot for at least five seconds.</p>
<p>1.6.1.2 Maintains speed sufficient to complete glide and does not flail limbs.</p>
<p>1.6.2 Propels self while keeping all eight wheels on the floor.</p>
<p>1.6.3 Moves easily and fluidly from one side of the track to the other.</p>
<p>1.6.3.1 Performs smooth, quick lateral cuts, crossing the track at least four times on each straightaway and at least three times on each track turn.</p>
<p>1.6.4 Backwards skating within track boundaries.</p>
<p>1.6.4.1 Maintains moderate pace skating backward around the entire track.</p>
        ]]>
    </string>
    <string name="skills_knee_taps">
        <![CDATA[
<h3>2.1 Knee Taps</h3>

<p>Skater must perform the following falls safely, correctly and naturally. Skaters must be able to slide into knee contact with the floor, rather than crashing onto pads. Slides should be performed from a brisk pace without using hands or flailing arms. Recovery to a normal skating pace should be smooth and immediate, unless noted otherwise.</p>

<p>2.1.1 Left.</p>
<p>2.1.2 Right.</p>
<p>2.1.3 Performs each knee tap without coming to a complete stop.</p>
<p>2.1.4 Taps a single knee without breaking normal skating stride.</p>
<p>2.1.5 Recovers from knee tap without using hands to get up.</p>
<p>2.1.6 Performs two consecutive single knee taps in stride, with low recovery.</p>
        ]]>
    </string>
    <string name="skills_knee_slides">
        <![CDATA[
<h3>2.2 Double Knee Slides</h3>

<p>Skater must perform the following falls safely, correctly and naturally. Skaters must be able to slide into knee contact with the floor, rather than crashing onto pads. Slides should be performed from a brisk pace without using hands or flailing arms. Recovery to a normal skating pace should be smooth and immediate, unless noted otherwise.</p>

<p>2.2.1 Knees do not make contact with ground at exact same time.</p>
<p>2.2.2 Returns to active skating within three seconds.</p>
<p>2.2.3 Recovers without using hands to get up.</p>
<p>2.2.4 Momentum used to initiate the slide is continued into the recovery to normal skating motion.</p>
        ]]>
    </string>
    <string name="skills_standing_stepping">
        <![CDATA[
<h3>3.1 Standing and Stepping from a Standstill, Maintaining Control of Wheels (not rolling)</h3>

<p>Skater must demonstrate the ability to perform the following tasks without losing balance, stumbling or falling.</p>

<p>3.1.1 Forward and backward.</p>
<p>3.1.2 Side to side in both directions.</p>
<p>3.1.3 Grapevine (first foot side steps, second foot steps across and in front of first foot, first foot side steps, second foot steps behind and crosses first foot) to both the right and left.</p>
<p>3.1.4 Shuffle (first foot side steps, second foot steps to meet first foot without crossing first foot, first foot immediately side steps in a hopping motion) to both the right and left.</p>
<p>3.1.5 Quick steps (both feet rapidly alternate in small steps, only one foot is on the ground at a time) in place and to the right and left.</p>
<p>3.1.6 Ability to balance on each foot from a stationary position at least 30 seconds.</p>
        ]]>
    </string>
    <string name="skills_hopping">
        <![CDATA[
<h3>3.2 Hopping</h3>

<p>Skater must demonstrate the ability to perform the following tasks without losing balance, stumbling or falling.</p>

<p>3.2.1 Hops over an object at least six inches (15 centimeters) in height without touching the object or losing balance, while skating at a moderate pace.</p>
<p>3.2.2 Jumps with both feet simultaneously, but does not have to land with both feet simultaneously.</p>
<p>3.2.3 Hops laterally at least 18 inches (45.5 centimeters) from a brisk forward speed.</p>
        ]]>
    </string>
    <string name="skills_focus">
        <![CDATA[
<h3>3.3 Focus</h3>

<p>Skater must demonstrate the ability to perform the following tasks without losing balance, stumbling or falling.</p>

<p>3.3.1 Comfortably looks left, right, and behind quickly and unexpectedly while maintaining regular skating stride at a moderate pace.</p>
        ]]>
    </string>
    <string name="skills_weaving">
        <![CDATA[
<h3>3.4 Weaving</h3>

<p>Skater must demonstrate the ability to perform the following tasks without losing balance, stumbling or falling.</p>

<p>3.4.1 Maneuvers through 10 cones, each no more than five feet (1.5 meters) apart (not to exceed 50 feet or 15 meters), placed through the straightaways and track turns, in less than six seconds.</p>
<p>3.4.2 Weaves comfortably and briskly through a moderately moving pack of skaters without focusing on their own feet.</p>
        ]]>
    </string>
    <string name="skills_translations">
        <![CDATA[
<h3>3.5 Transitions</h3>

<p>Skater must demonstrate the ability to perform the following tasks without losing balance, stumbling or falling.</p>

<p>3.5.1 Turns 180° without breaking stride, maintaining a moderate pace.</p>
<p>3.5.1.1 Turns clockwise and counterclockwise from front to back.</p>
<p>3.5.1.2 Turns clockwise and counterclockwise from back to front.</p>
<p>3.5.2 Turns 360° without breaking stride, from a moderate pace. Using two 180° turns in a row, without breaking stride, is acceptable.</p>
        ]]>
    </string>
</resources>